[workspace]
resolver = "3"
members = [
    # MV
    "rpgmvp",
    "rpgmv-tool",
    "rpgmv-types",
    
    # MZ
    "rpgmz-tool",
    "rpgmz-types",
    
    # Both
    "rpgmv-image-viewer", "rpgmv-tool-util",
]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"
