[package]
name = "rpgmv-image-viewer"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
eframe = "0.34.1"
egui-toast = "0.20.0"
egui_extras = { version = "0.34.1", features = [ "all_loaders" ] }
encrypterator = { path = "../encrypterator" }
env_logger = "0.11.10"
image = { version = "0.25.10", features = [ "png", "jpeg", "ico" ], default-features = false }
rayon = "1.12.0"
rfd = { version = "0.17.2", features = [ "xdg-portal" ], default-features = false }
rpgmvp = { version = "0.0.0", path = "../rpgmvp" }
tokio = "1.52.1"

[build-dependencies]
winres = "0.1.12"

[features]
default = []
force-console-subsystem = []
