[package]
name = "rpgmv-tool"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
base16ct = { version = "0.3.0", features = [ "alloc" ] }
glob = "0.3.3"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
rpgmv-types = { version = "0.0.0", path = "../rpgmv-types" }
rpgmvp = { version = "0.0.0", path = "../rpgmvp" }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
toml = "0.9.8"
