[package]
name = "rpgmv-tool"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.103"
base16ct = { version = "1.0.0", features = [ "alloc" ] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
glob = "0.3.3"
rpgmv-tool-util = { version = "0.0.0", path = "../rpgmv-tool-util" }
rpgmv-types = { version = "0.0.0", path = "../rpgmv-types" }
rpgmvp = { version = "0.0.0", path = "../rpgmvp" }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
toml = "1.1.2"
