[package]
name = "rpgmz-tool"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.95"
argh = "0.1.13"
flate2 = { version = "1.0.35" }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
rpgmz-types = { version = "0.0.0", path = "../rpgmz-types" }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.134"
toml = "0.8.19"
